Fixes on Curators <-> Institution relationship